--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           </button>
         </header>
         <form
-          id="form"
+          id="add-form"
           class="modal-window absolute scale-0 bg-slate-200 flex-col p-6 space-y-5 rounded-lg z-10 w-full top-0 transition-all duration-300"
         >
           <div class="flex justify-between items-center">
