--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,11 @@
         </header>
         <form
           id="add-form"
-          class="modal-window absolute scale-0 bg-slate-200 flex-col p-6 space-y-5 rounded-lg z-10 w-full top-0 transition-all duration-300"
+          class="add-modal-window absolute scale-0 bg-slate-200 flex-col p-6 space-y-5 rounded-lg z-10 w-full top-0 transition-all duration-300"
         >
           <div class="flex justify-between items-center">
             <p class="text-2xl">Add post</p>
-            <button type="button" class="h-9 w-9 group button-close">
+            <button type="button" class="h-9 w-9 group add-button-close">
               <img
                 class="group-hover:bg-pink-300 p-2 rounded-full active:translate-y-0.5 group-hover:shadow-lg group-hover:shadow-slate-700 transition-all duration-200"
                 src="../img/cross.png"
@@ -41,26 +41,60 @@
           </div>
           <div>
             <textarea
-              id="title-content"
               placeholder="Here goes title of your post..."
-              class="bg-slate-100 rounded-lg py-4 px-3 w-full"
+              class="add-title-content bg-slate-100 rounded-lg py-4 px-3 w-full"
             ></textarea>
           </div>
           <div>
             <textarea
-              id="post-content"
               placeholder="Here goes your post..."
-              class="bg-slate-100 rounded-lg py-4 px-3 w-full min-h-[10rem]"
+              class="add-post-content bg-slate-100 rounded-lg py-4 px-3 w-full min-h-[10rem]"
             ></textarea>
           </div>
           <div class="flex justify-between items-center">
             <div></div>
             <button
-              id="upload-post"
               type="submit"
-              class="bg-pink-500 px-[4.5rem] py-3 text-white rounded-2xl hover:bg-pink-400 active:bg-pink-700 hover:shadow-lg hover:shadow-slate-500 transition-all duration-200 active:translate-y-0.5"
+              class="add-upload-post bg-pink-500 px-[4.5rem] py-3 text-white rounded-2xl hover:bg-pink-400 active:bg-pink-700 hover:shadow-lg hover:shadow-slate-500 transition-all duration-200 active:translate-y-0.5"
             >
               Add
+            </button>
+          </div>
+        </form>
+        <form
+          id="edit-form"
+          data-id=""
+          class="edit-modal-window absolute scale-0 bg-slate-200 flex-col p-6 space-y-5 rounded-lg z-10 w-full top-0 transition-all duration-300"
+        >
+          <div class="flex justify-between items-center">
+            <p class="text-2xl">Edit post</p>
+            <button type="button" class="h-9 w-9 group edit-button-close">
+              <img
+                class="group-hover:bg-pink-300 p-2 rounded-full active:translate-y-0.5 group-hover:shadow-lg group-hover:shadow-slate-700 transition-all duration-200"
+                src="../img/cross.png"
+                alt=""
+              />
+            </button>
+          </div>
+          <div>
+            <textarea
+              placeholder="Here goes title of your post..."
+              class="edit-title-content bg-slate-100 rounded-lg py-4 px-3 w-full"
+            ></textarea>
+          </div>
+          <div>
+            <textarea
+              placeholder="Here goes your post..."
+              class="edit-post-content bg-slate-100 rounded-lg py-4 px-3 w-full min-h-[10rem]"
+            ></textarea>
+          </div>
+          <div class="flex justify-between items-center">
+            <div></div>
+            <button
+              type="submit"
+              class="edit-upload-post bg-pink-500 px-[4.5rem] py-3 text-white rounded-2xl hover:bg-pink-400 active:bg-pink-700 hover:shadow-lg hover:shadow-slate-500 transition-all duration-200 active:translate-y-0.5"
+            >
+              Edit
             </button>
           </div>
         </form>
