--- a/src/index.html
+++ b/src/index.html
@@ -173,6 +173,17 @@
             </div>
           </li>
         </ul>
+        <!-- Pagination menu -->
+        <div
+          id="pagination-menu"
+          class="space-x-4 items-center flex justify-center"
+        >
+          <button
+            class="hidden w-12 h-12 font-bold hover:bg-slate-300 hover:scale-110 bg-slate-400 items-center justify-center rounded-lg transition-all duration-300 hover:shadow-lg hover:shadow-slate-700 active:translate-y-0.5 active:bg-slate-700 active:text-white"
+          >
+            1
+          </button>
+        </div>
       </section>
     </div>
     <script type="module" src="../JS/script.js"></script>
