--- a/src/index.html
+++ b/src/index.html
@@ -180,11 +180,11 @@
 
           <div class="flex justify-between items-center">
             <label
-              for="inputImg"
+              for="inputImgAdd"
               class="cursor-pointer bg-orange-500 px-[3rem] py-[0.7rem] text-white rounded-2xl hover:bg-orange-400 active:bg-orange-700 hover:shadow-lg hover:shadow-slate-500 transition-all duration-200 active:translate-y-0.5 flex"
               >Add Image
               <input
-                id="inputImg"
+                id="inputImgAdd"
                 name="image"
                 type="file"
                 class="hidden"
@@ -231,11 +231,11 @@
           </div>
           <div class="flex justify-between items-center">
             <label
-              for="inputImg"
+              for="inputImgEdd"
               class="cursor-pointer bg-blue-400 px-[3rem] py-[0.7rem] text-white rounded-2xl hover:bg-blue-300 active:bg-blue-700 hover:shadow-lg hover:shadow-slate-700 transition-all duration-200 active:translate-y-0.5 flex"
               >Add Image
               <input
-                id="inputImg"
+                id="inputImgEdd"
                 name="image"
                 type="file"
                 class="hidden"
