--- a/src/index.html
+++ b/src/index.html
@@ -321,10 +321,12 @@
         <ul class="post-list flex flex-col space-y-2 justify-center relative">
           <!-- Posts -->
           <li
-            class="post flex-col justify-between p-6 bg-slate-100 space-y-14 rounded-lg transition-all duration-300 hover:bg-slate-200 group hidden"
+            class="post flex-col justify-between p-6 bg-slate-100 space-y-14 rounded-lg transition-all duration-300 hover:bg-slate-200 group overflow-auto hidden"
           >
             <div class="flex justify-between items-center">
-              <h2 class="title text-2xl">${item.title}</h2>
+              <h2 class="title text-2xl">
+                ${item.title}yytytytytytytytytytytytytytytytytytyty
+              </h2>
               <div class="flex items-center space-x-3">
                 <button
                   data-id="${item.id}"
