All add validation character

--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
               class="add-title-content bg-slate-100 rounded-lg py-4 px-3 w-full"
             ></textarea>
             <div
-              class="add-title-characters border-2 border-orange-500 py-3 rounded-lg bg-white max-h-5 max-w-[13rem] flex justify-center items-center hidden"
+              class="add-title-characters border-2 border-orange-500 py-3 rounded-lg bg-white max-w-[33%] px-2 justify-center items-center hidden"
             ></div>
           </div>
 
@@ -186,10 +186,8 @@
               class="add-post-content bg-slate-100 rounded-lg py-4 px-3 w-full min-h-[10rem]"
             ></textarea>
             <div
-              class="post-characters border-2 border-orange-500 py-3 rounded-lg bg-white max-h-5 max-w-[13rem] flex justify-center items-center"
-            >
-              15 characters (max 250)
-            </div>
+              class="add-post-characters border-2 border-orange-500 py-3 rounded-lg bg-white justify-center max-w-[33%] px-2 items-center hidden"
+            ></div>
           </div>
 
           <div class="flex justify-between items-center">
