--- a/src/index.html
+++ b/src/index.html
@@ -229,17 +229,25 @@
           </div>
           <div>
             <textarea
+              maxlength="150"
               name="title"
               placeholder="Here goes title of your post..."
               class="edit-title-content bg-slate-100 rounded-lg py-4 px-3 w-full"
             ></textarea>
+            <div
+              class="edit-title-characters border-2 border-orange-500 py-3 rounded-lg bg-white justify-center max-w-[33%] px-2 items-center hidden"
+            ></div>
           </div>
           <div>
             <textarea
+              maxlength="250"
               name="body"
               placeholder="Here goes your post..."
               class="edit-post-content bg-slate-100 rounded-lg py-4 px-3 w-full min-h-[10rem]"
             ></textarea>
+            <div
+              class="edit-post-characters border-2 border-orange-500 py-3 rounded-lg bg-white justify-center max-w-[33%] px-2 items-center hidden"
+            ></div>
           </div>
           <div class="flex justify-between items-center">
             <label
