--- a/src/index.html
+++ b/src/index.html
@@ -341,7 +341,7 @@
         <ul class="post-list flex flex-col space-y-2 justify-center relative">
           <!-- Posts -->
           <li
-            class="post flex-col justify-between p-6 bg-slate-100 space-y-14 rounded-lg transition-all duration-300 hover:bg-slate-200 group overflow-auto"
+            class="post flex-col justify-between p-6 bg-slate-100 space-y-14 rounded-lg transition-all duration-300 hover:bg-slate-200 group overflow-auto hidden"
           >
             <div class="flex justify-between items-center space-x-4">
               <h2 class="title text-2xl overflow-auto">
